--- a/src/main/webapp/static/css/books.css
+++ b/src/main/webapp/static/css/books.css
@@ -6,9 +6,10 @@ body {
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+
 }
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -16,26 +17,64 @@ body {
     background-image: url("../img/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    overflow:hidden;
 }
 
-.main-content{
-    align-self: center;
-    min-width: 90%;
-    max-width: 100%;
-    background-color: rgba(0, 81, 143, 0.9);
-    align-content: center;
-    justify-content: center;
-
-}
-.books_list_container{
+.main-content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    flex: 1 1 auto;
+    align-self: center;
+    width: 100%;
+    background-color: rgba(145, 145, 145, 0.35);
+}
+
+.books_list_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1 1 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 
 .books_table {
+    flex: 1 1 auto;
+    border-collapse: collapse;
+    border: 1px solid #000000;
+    padding: 8px;
     color: #e9e9e9;
 
 }
+
+.books_table, th, td {
+    border: 1px solid #000000;
+    padding: 10px;
+}
+
+.books_table tr:nth-child(odd) {
+    background-color: rgba(78, 126, 248, 0.8);
+}
+
+.books_table tr:nth-child(even) {
+    background-color: rgb(118, 152, 241);
+}
+
+.books_table tr:hover {
+    background-color: #4561b9;
+}
+
+.books_table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background-color: #3964d9;
+    color: white;
+}
+
+.books_table td {
+    padding: 10px 20px;
+}
+
+
+
 
