--- a/src/main/webapp/static/css/header.css
+++ b/src/main/webapp/static/css/header.css
@@ -32,6 +32,7 @@ body {
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    font-family: 'Open Sans', sans-serif;
 }
 input,
 button,
