--- a/src/main/webapp/static/css/books.css
+++ b/src/main/webapp/static/css/books.css
@@ -24,6 +24,7 @@ body {
     flex-direction: column;
     flex: 1 1 auto;
     align-self: center;
+    justify-content: space-between;
     width: 100%;
     background-color: rgba(145, 145, 145, 0.35);
 }
@@ -31,15 +32,17 @@ body {
 .books_list_container {
     display: flex;
     flex-direction: column;
+    /*flex: 1 1 auto;*/
+
     align-items: center;
-    flex: 1 1 auto;
+
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
 
 .books_table {
-    flex: 1 1 auto;
+    /*flex: 1 1 auto;*/
     border-collapse: collapse;
     border: 1px solid #000000;
     padding: 8px;
@@ -75,6 +78,10 @@ body {
     padding: 10px 20px;
 }
 
+.pages_container{
+    align-self: center;
+    max-width: 25%;
+}
 
 
 
