--- a/src/main/webapp/static/css/books.css
+++ b/src/main/webapp/static/css/books.css
@@ -80,8 +80,27 @@ body {
 
 .pages_container{
     align-self: center;
-    max-width: 25%;
+    display: inline-block;
+    padding-bottom: 20px;
 }
+.pages_container a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #656565;
+    background-color: #ddd;
+}
+
+.pages_container a.active {
+    background-color: #4CAF50;
+    color: white;
+    border: 1px solid #4CAF50;
+}
+
+.pages_container a:hover:not(.active) {background-color: rgb(133, 133, 133);}
+
 
 
 
