--- a/src/main/webapp/static/css/books.css
+++ b/src/main/webapp/static/css/books.css
@@ -76,7 +76,7 @@ body {
 
 
 .books_table tr:nth-child(odd) {
-    background-color: rgba(78, 126, 248, 0.8);
+    background-color: rgba(78, 126, 248);
 }
 
 .books_table tr:nth-child(even) {
@@ -87,10 +87,15 @@ body {
     background-color: #4561b9;
 }
 
-
-
 .books_table td {
     padding: 10px 20px;
+}
+
+.removed-book {
+    background: #963c29;
+}
+.present-book {
+    background: #238323;
 }
 
 .pages_container{
