implemented error message save to session

--- a/src/main/webapp/static/css/book_edit.css
+++ b/src/main/webapp/static/css/book_edit.css
@@ -118,3 +118,8 @@ input:valid {
 input:invalid {
     border: 2px solid #dd2c00;
 }
+.error-msg{
+    font-size: 24px;
+    color: red;
+    text-align: center;
+}
