--- a/src/main/webapp/static/css/book_edit.css
+++ b/src/main/webapp/static/css/book_edit.css
@@ -12,7 +12,7 @@ body {
     flex-direction: column;
     margin: 0;
     flex: 1 1 auto;
-    background-image: url("../img/background.jpg");
+    background-image: url("../img/background_dark.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
