--- a/src/main/webapp/static/css/books.css
+++ b/src/main/webapp/static/css/books.css
@@ -14,7 +14,7 @@ body {
     flex-direction: column;
     margin: 0;
     flex: 1 1 auto;
-    background-image: url("../img/background.jpg");
+    background-image: url("../img/background_dark.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -26,17 +26,41 @@ body {
     align-self: center;
     justify-content: space-between;
     width: 100%;
-    background-color: rgba(145, 145, 145, 0.35);
+    /*background-color: rgba(145, 145, 145, 0.35);*/
 }
+.top-row{
+    align-self: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    min-width: 1200px;
+    max-width: 80%;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+.books-list-title{
+    color: white;
+    font-size: 36px;
+    font-weight: 700;
+    /*text-align: center;*/
+}
+.books-add-new {
+    font-size: 1.25em;
+    padding: 20px 40px;
+    background:forestgreen;
+    border: none;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
 
 .books_list_container {
     display: flex;
     flex-direction: column;
-    /*flex: 1 1 auto;*/
-
+    flex: 1 1 auto;
     align-items: center;
-
-    margin-top: 20px;
     margin-bottom: 20px;
 }
 
@@ -55,7 +79,6 @@ body {
 }
 
 .books_table th {
-
     background-color: #3964d9;
     color: white;
 }
