added display_orders.jsp page

--- a/src/main/webapp/static/css/books.css
+++ b/src/main/webapp/static/css/books.css
@@ -41,7 +41,7 @@ body {
     padding-bottom: 5px;
 }
 
-.books-list-title {
+.books-list-title, .users-orders-title{
     color: white;
     font-size: 36px;
     font-weight: 700;
