--- a/src/main/webapp/static/css/index.css
+++ b/src/main/webapp/static/css/index.css
@@ -3,28 +3,18 @@ body {
     height: 100%;
     font-size: 18px;
     margin: 0;
-
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
+    flex: 1 1 auto;
     margin: 0;
     /*background: #684242;*/
 }
-
-/* .container,
-.flex-block {
-  font: 500 1rem 'Quicksand', sans-serif;
-
-} */
-/* .header {
-    background-color: rgb(0, 255, 30);
-    height: 8%;
-    flex-direction: row;
-} */
 
 .languages {
 }
@@ -34,9 +24,28 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     overflow:hidden;
-    /*background-color: rgb(255, 231, 194);*/
     flex: 1 1 auto;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-title{
+    color: white;
+    font-size: 80px;
+    text-align: center;
+    font-weight: 900;
+    text-shadow: 3px 3px #3a3a3a;
+}
+.sub-title{
+    margin-top: 10px;
+    color: white;
+    font-size: 40px;
+    text-align: center;
+    font-weight: 900;
+    text-shadow: 3px 3px #707070;
 }
 
 
-/* -------------------------------------footer------------------------------------------- */
