changed order canceled to order declined

--- a/src/main/webapp/static/css/orders.css
+++ b/src/main/webapp/static/css/orders.css
@@ -171,6 +171,12 @@ body {
     text-align: center;
 }
 
+.accept-order{
+    display: inline-block;
+    background: rgb(63, 182, 63);
+}
+.cancel-order
+
 /*.overdue-tr{*/
 /*    background: #d72d2d;*/
 /*}*/
