--- a/src/main/webapp/static/css/books.css
+++ b/src/main/webapp/static/css/books.css
@@ -29,7 +29,7 @@ body {
     /*background-color: rgba(145, 145, 145, 0.35);*/
 }
 
-.top-row {
+.books-top-row {
     align-self: center;
     display: flex;
     flex-direction: row;
@@ -41,11 +41,24 @@ body {
     padding-bottom: 5px;
 }
 
+.top-row {
+    align-self: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    min-width: 1200px;
+    max-width: 80%;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+
+
 .books-list-title, .users-orders-title{
     color: white;
     font-size: 36px;
     font-weight: 700;
-    /*text-align: center;*/
+    text-align: center;
 }
 
 .books-add-new {
@@ -188,3 +201,6 @@ body {
     background: rgb(76, 217, 76);
 }
 
+.centered-title{
+
+}
