--- a/src/main/webapp/static/css/requests.css
+++ b/src/main/webapp/static/css/requests.css
@@ -34,7 +34,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     min-width: 1200px;
     max-width: 80%;
     padding-top: 10px;
@@ -45,7 +45,7 @@ body {
     color: white;
     font-size: 36px;
     font-weight: 700;
-    /*text-align: center;*/
+    text-align: center;
 }
 
 .orders_list_container {
